Styling fix for relevant selection on mobile

--- a/source/stylesheets/components/current-selection.scss
+++ b/source/stylesheets/components/current-selection.scss
@@ -4,6 +4,12 @@
   margin-bottom: 40px;
   padding-bottom: 15px;
   border-bottom: 1px solid #EFEFEF;
+
+  @media(max-width: 500px) {
+    flex-direction: column;
+    align-items: flex-start;
+    line-height: 26px;
+  }
 }
 
 #current-selection p {
